Specify the python version during invocation

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -927,7 +927,7 @@ if __name__ == "__main__":
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{images/flask-not-found.png}
-\caption{The default 404 Not Found page}
+\caption{The default 404 Not Found page.}
 \label{fig:flask-not-found}
 \end{figure}
 
@@ -954,7 +954,7 @@ if __name__ == "__main__":
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{images/flask-404-text.png}
-\caption{The default 404 Not Found page}
+\caption{Custom 404 error page.}
 \label{fig:flask-404-text}
 \end{figure}
 
@@ -2269,7 +2269,7 @@ for a little bit of style</p>
 \end{lstlisting}
 
 
-\paragraph{} We can now use that empty file we just created, sqlite3.db, from Python. Let's explore this for a moment. Instead of diving right into Flask let's just use the Python REPL and manipulate our new database a little to get a feel for interacting with it.  For example, start a Python shell (by typing python in the bash shell) then:
+\paragraph{} We can now use that empty file we just created, sqlite3.db, from Python. Let's explore this for a moment. Instead of diving right into Flask let's just use the Python REPL and manipulate our new database a little to get a feel for interacting with it.  For example, start a Python shell (by typing python3 in the bash shell) then:
 
 \begin{lstlisting}[style=DOS]
     >>> import sqlite3
