More accurate caption

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -927,7 +927,7 @@ if __name__ == "__main__":
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{images/flask-not-found.png}
-\caption{The default 404 Not Found page.}
+\caption{The default 404 Not Found page}
 \label{fig:flask-not-found}
 \end{figure}
 
@@ -954,7 +954,7 @@ if __name__ == "__main__":
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{images/flask-404-text.png}
-\caption{Custom 404 error page.}
+\caption{Custom 404 error page}
 \label{fig:flask-404-text}
 \end{figure}
 
