--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2488,7 +2488,7 @@ $  python3 init_db.py
 \paragraph{} If you get any output other than a new prompt then the library is not available (in which case you should contact the module leader for a fix). You can now import and use PyCrypto within your web-apps, however let's first explore what the library can do in the Python REPL, so launch python in your shell, e.g.
 
 \begin{lstlisting}[style=DOS]
-    $ python
+    $ python3
 \end{lstlisting}
 
 \paragraph{} We can now look at some of the things that we can use PyCrypto to do. First we shall look at Hashing, taking input and calculating a fixed-length output called a hash-value, then we will look at Encryption, taking input and a key and producing a cypher text. The main difference between the two in practise is that hash algorithms are designed, as a rule, to be one-way or \emph{trapdoor} functions, whilst, so long as you know the key, encryption algorithms are designed to enable you to recover the input from the cyphertext.
