Add '.' alias to linux cribsheet'

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2849,6 +2849,11 @@ if __name__ == "__main__":
     $ cd ~
 \end{lstlisting}
 
+\item[.] An alias that means the current directory. So if you want to explicitly affect something in the current directory you use this. It can help to avoid ambiguity. For example, when running a script, we specify that we want to run the one in the current folder rather than another one on the system executable path:
+\begin{lstlisting}[style=DOS]
+    $ ./runme.sh
+\end{lstlisting}
+
 \item[..] An alias that means the parent of the current directory. So if you want to move from the current directory to it's parent then you can use this:
 \begin{lstlisting}[style=DOS]
     $ cd ..
