--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2836,7 +2836,7 @@ if __name__ == "__main__":
 \appendix
 \chapter{Cribsheets}
 \label{cribsheets}
-\paragraph{} These cribsheets are useful for collecting together lots of knew syntax but are no substitute for your own notes (and practise. Stuff you know is much better than stuff you can look up). Either way, as you learn new stuff you should expand these cribsheets with extra commands that you find useful.
+\paragraph{} These cribsheets are useful for collecting together lots of new syntax but are no substitute for your own notes (and practise. Stuff you know is much better than stuff you can look up). Either way, as you learn new stuff you should expand these cribsheets with extra commands that you find useful.
 
 \section{Linux}
 \label{cribsheet_linux}
