Minor expansion of reasons to implement from scratch

--- a/workbook/scratch.tex
+++ b/workbook/scratch.tex
@@ -15,7 +15,9 @@
 
 \paragraph{} So we're going to assume that we have a Web browser already, so we've got something that can make requests to our simple HTTP server and consume the response. Any browser will do so just use your favourite. By using a standard browser as our client we can demonstrate to ourselver that what we are generating in our server is what the browser expects, because we will get real web pages served up and displayed in our browser. We'll also use cURL a little bit later on, partly for practise, and partly to let us explore the features of our tiny HTTP server.
 
-\paragraph{} Finally, before we properly begin, and get to some code, treat this exercise akin to when you implement basic algorithms and data structure in a Computer Science class. We're not implementing an HTTP server here that we'd necessarily use in the real world, although knowing how to write a short Python script that can serve up arbitrary data over HTTP is a \emph{very} useful skill to have under the right circumstances. No, we're just doing this for fun and learning. When we're sure we understand things we go back to proven technologies like Flask, uWSGI, and NGinX. Just as we always use builtins and library versions of stacks, queues, and linked lists rather than rolling our own for each project.
+\paragraph{} Finally, before we properly begin, and get to some code, treat this exercise akin to when you implement basic algorithms and data structure in a Computer Science class. Implement your own version so that you can prove to yourself that you understand it\footnote{in the Feynmann sense} and then subsequently use a pre-built and thoroughly test library or framework version in your real world code. 
+
+\paragraph{} We're not implementing an HTTP server here that we'd necessarily use in the real world, although knowing how to write a short Python script that can serve up arbitrary data over HTTP is a \emph{very} useful skill to have under the right circumstances. No, we're just doing this for fun and learning. When we're sure we understand things we go back to proven technologies like Flask, uWSGI, and NGinX. Just as we always use builtins and library versions of stacks, queues, and linked lists rather than rolling our own for each project.
 
 \paragraph{} The essence of Web serving is to listen for requests and to respond appropriately. We don't know when a request will come, so we are essentially saying that we want to wait, and listen, indefinitely, for a request to arrive.
 
