--- a/workbook/scratch.tex
+++ b/workbook/scratch.tex
@@ -21,7 +21,7 @@
 
 \paragraph{} The essence of Web serving is to listen for requests and to respond appropriately. We don't know when a request will come, so we are essentially saying that we want to wait, and listen, indefinitely, for a request to arrive.
 
-\paragraph{} In a moment we'll look at a very simple HTTP server implemented in Python3. Whilst I refer to it as the simplest, we could probably code golf it into something even simpler. For example, Python includes libraries that implement aspects of HTTP so we could just use those, but that feels like cheating\footnote{Python3 actually has a one liner that you can use from the command line to serve up any folder that you run it in using HTTP. Really useful on occasion. Here it is: python -m http.server}. Instead, my example will just use a basic networking library that's standard in Python3, but nothing else that is specific to HTTP or it's implementation. This way, assuming that we have networking ability, that is, the ability to send an receive data over sockets, what do we need to do to implement the important parts of the protocol so that a Web server can usefully interact with our program?
+\paragraph{} In a moment we'll look at a very simple HTTP server implemented in Python3. Whilst I refer to it as the simplest, we could probably code golf it into something even simpler. For example, Python includes libraries that implement aspects of HTTP so we could just use those, but that feels like cheating\footnote{Python3 actually has a one liner that you can use from the command line to serve up any folder that you run it in using HTTP. Really useful on occasion. Here it is: python -m http.server}. Instead, my example will just use a basic networking library that's standard in Python3, but nothing else that is specific to HTTP or it's implementation. This way, assuming that we have networking ability, that is, the ability to send and receive data over sockets, what do we need to do to implement the important parts of the protocol so that a Web server can usefully interact with our program?
 
 \paragraph{} So here we have our really simple HTTP server (simplest.py):
 
