Add new discussion before simplest example

--- a/workbook/scratch.tex
+++ b/workbook/scratch.tex
@@ -23,6 +23,12 @@
 
 \paragraph{} In a moment we'll look at a very simple HTTP server implemented in Python3. Whilst I refer to it as the simplest, we could probably code golf it into something even simpler. For example, Python includes libraries that implement aspects of HTTP so we could just use those, but that feels like cheating\footnote{Python3 actually has a one liner that you can use from the command line to serve up any folder that you run it in using HTTP. Really useful on occasion. Here it is: python -m http.server}. Instead, my example will just use a basic networking library that's standard in Python3, but nothing else that is specific to HTTP or it's implementation. This way, assuming that we have networking ability, that is, the ability to send and receive data over sockets, what do we need to do to implement the important parts of the protocol so that a Web server can usefully interact with our program?
 
+\paragraph{} The basic process is straightforward. Recall that HTTP is not a particularly low-level protocol, it actually relies on lower level networking to provide a networking foundation. For now we'll assume that the lowest levels of the network stack are accounted for, e.g. a physical connection\footnote{most likely Ethernet or Wifi}, and we'll work at the lowest level that Python needs to care for. So our process is to first create a communication path that our HTTP server can listen through. This communication path will be a network socket that will listen for communication on a specified network interface. Furthermore, the specific type of socket will be a TCP/IP socket. That is, a socket which uses the Internet Protocol (IP) for addressing and the Transmission Control Protocol (TCP) for transmitting and receiving data\footnote{TCP and IP aren't \emph{necessary} for implementing an HTTP server but the rest of the current public Web is underpinned by both of these protocols so if we want to interact with the rest of the Web, for example, enabling existing browsers to contact our server, then we need to use the same foundational technologies.}. Once we have a TCP/IP socket created and listening, which is the bulk of the simplest example, we can then do the implementation of enough HTTP to return a valid response to a connecting Web browser.
+
+\paragraph{} That job of returning a valid response merely means to write plain text to our socket when a connection is recieved. The text that we write is merely three lines. The first line is the header, e.g. \emph{HTTP/1.1 200 OK}, the next line is the blank separator between header and body, and the third line is the content of the response (which will be our HTML).
+
+\paragraph{} Note that in the simplest version, we cheat a little, and return the same HTTP response for any incoming connection. But later on perhaps we'll look at what the client is actually asking requesting, and vary our presponse accordingly.
+
 \paragraph{} So here we have our really simple HTTP server (simplest.py):
 
 \begin{lstlisting}
